20010421
 - OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2001/04/20 07:17:51
     [clientloop.c ssh.1]
     Split out and improve escape character documentation, mention ~R in
     ~? help text; ok markus@
 - Update RPM spec files for CVS version.h

20010420
 - OpenBSD CVS Sync                         
   - ian@cvs.openbsd.org 2001/04/18 16:21:05
     [ssh-keyscan.1]                        
     Fix typo reported in PR/1779           
   - markus@cvs.openbsd.org 2001/04/18 21:57:42                            
     [readpass.c ssh-add.c]                                                
     call askpass from ssh, too, based on work by roth@feep.net, ok deraadt
   - markus@cvs.openbsd.org 2001/04/18 22:03:45                           
     [auth2.c sshconnect2.c]                                              
     use FDQN with trailing dot in the hostbased auth packets, ok deraadt@
   - markus@cvs.openbsd.org 2001/04/18 22:48:26
     [auth2.c]                                 
     no longer const                           
   - markus@cvs.openbsd.org 2001/04/18 23:43:26                          
     [auth2.c compat.c sshconnect2.c]                                    
     more ssh v2 hostbased-auth interop: ssh.com >= 2.1.0 works now      
     (however the 2.1.0 server seems to work only if debug is enabled...)
   - markus@cvs.openbsd.org 2001/04/18 23:44:51
     [authfile.c] 
     error->debug; noted by fries@ 
   - markus@cvs.openbsd.org 2001/04/19 00:05:11       
     [auth2.c]                                        
     use local variable, no function call needed.     
     (btw, hostbased works now with ssh.com >= 2.0.13)
  - (bal) Put scp-common.h back into scp.c (it exists in the upstream
    tree) pointed out by Tom Holroyd <tomh@po.crl.go.jp>

20010418
  - OpenBSD CVS Sync                            
   - markus@cvs.openbsd.org 2001/04/17 19:34:25
     [session.c]
     move auth_approval to do_authenticated().
     do_child(): nuke hostkeys from memory